fix: Hide scrollbar on PlayerSheet

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,16 +57,24 @@ li {
   pointer-events: none;
 }
 
-//::-webkit-scrollbar,
-//*::-webkit-scrollbar {
-//  width: 8px;
-//}
+.cdk-overlay-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
-//*::-webkit-scrollbar-track {
-//  box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
-//}
+  *::-webkit-scrollbar-track {
+    display: none;
+    box-shadow: none;
+  }
 
-//*::-webkit-scrollbar-thumb {
-//  background-color: darkgrey;
-//  outline: 1px solid slategrey;
-//}
+  ::-webkit-scrollbar,
+  *::-webkit-scrollbar {
+    display: none;
+    width: 0;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    display: none;
+    background-color: transparent;
+    outline: none;
+  }
+}
